# MirD-Common-C

./: .gitignore  CMakeLists.txt  LICENSE.md  MDC.dsw  README.md
MDC/: CMakeLists.txt  MDC.dsp  dllexport_define.inc  dllexport_undefine.inc
MDC/include/c/wchar_t/: wide_encoding.h
MDC/include/mdc/container/: map.h  pair.h  vector.h
MDC/include/mdc/error/: exit_on_error.h
MDC/include/mdc/filesystem/: current_executable_path.h  filesystem.h
MDC/include/mdc/macro/: concat_macro.h  template_macro.h
MDC/include/mdc/malloc/: malloc.h
MDC/include/mdc/object/: arithmetic_object.h  character_object.h  float_object.h  floating_object.h  integer.h  integer_object.h  long_object.h  object.h  pointer.h  schar_object.h  short_object.h  string_literal_object.h  uchar_object.h  uinteger_object.h  ulong_object.h  ushort_object.h  windows_character_object.h  windows_float_object.h  windows_floating_object.h  windows_integer_object.h  windows_string_literal_object.h
MDC/include/mdc/object_metadata/: object_metadata.h
MDC/include/mdc/std/: assert.h  stdbool.h  stdint.h  threads.h  uchar.h  wchar.h
MDC/include/mdc/string/: basic_string.h  char_traits.h  string.h
MDC/include/mdc/wchar_t/: filew.h  wide_decoding.h  wide_encoding.h
MDC/include/mdc/windows/: vs_fixed_file_info.h  windows_vs_fixed_file_info.h
MDC/src/mdc/container/: map.c  map_metadata.c  pair.c  pair_metadata.c  vector.c  vector_metadata.c
MDC/src/mdc/error/: exit_on_error.c
MDC/src/mdc/filesystem/: current_executable_path.c
MDC/src/mdc/malloc/: malloc.c
MDC/src/mdc/object/: arithmetic_object.c  arithmetic_object_metadata.c  character_object.c  float_object.c  float_object_metadata.c  floating_object.c  integer_object.c  integer_object_metadata.c  long_object.c  long_object_metadata.c  schar_object.c  schar_object_metadata.c  short_object.c  short_object_metadata.c  string_literal_object.c  string_literal_object_metadata.c  uchar_object.c  uchar_object_metadata.c  uinteger_object.c  uinteger_object_metadata.c  ulong_object.c  ulong_object_metadata.c  ushort_object.c  ushort_object_metadata.c  windows_character_object.c  windows_float_object.c  windows_float_object_metadata.c  windows_floating_object.c  windows_integer_object.c  windows_integer_object_metadata.c  windows_string_literal_object.c  windows_string_literal_object_metadata.c
MDC/src/mdc/object_metadata/: object_metadata.c
MDC/src/mdc/std/: threads.c
MDC/src/mdc/string/: basic_string.c  basic_string_metadata.c  char_traits.c
MDC/src/mdc/wchar_t/: wide_decoding.c  wide_encoding.c
MDC/src/mdc/windows/: vs_fixed_file_info.c  windows_file_version_info.c  windows_file_version_info.h  windows_vs_fixed_file_info.c
MDC/src/object/: integer.c  pointer.c
MDCc/: CMakeLists.txt  LICENSE.md  MDCc.dsp  dllexport_define.inc  dllexport_undefine.inc
MDCc/include/mdc/error/: exit_on_error.h
MDCc/include/mdc/malloc/: malloc.h
MDCc/include/mdc/std/: assert.h  stdbool.h  stdint.h  threads.h  wchar.h
MDCc/include/mdc/wchar_t/: filew.h  wide_decoding.h  wide_encoding.h
MDCc/src/mdc/error/: exit_on_error.c
MDCc/src/mdc/malloc/: malloc.c
MDCc/src/mdc/wchar_t/: wide_decoding.c  wide_encoding.c
MDCcpp98/: CMakeLists.txt  LICENSE.md  MDCcpp98.dsp  dllexport_define.inc  dllexport_undefine.inc
MDCcpp98/include/mdc/error/: exit_on_error.hpp
MDCcpp98/include/mdc/std/: condition_variable.hpp  mutex.hpp  threads.hpp
MDCcpp98/include/mdc/wchar_t/: wide_decoding.hpp  wide_encoding.hpp
MDCcpp98/include/mdc/windows/: vs_fixed_file_info.hpp  windows_vs_fixed_file_info.hpp
MDCcpp98/src/mdc/error/: exit_on_error.cpp
MDCcpp98/src/mdc/std/: threads.cpp
MDCcpp98/src/mdc/wchar_t/: wide_decoding.cpp  wide_encoding.cpp
MDCcpp98/src/mdc/windows/: vs_fixed_file_info.cpp  windows_vs_fixed_file_info.cpp
Tests/: CMakeLists.txt  Tests.dsp
Tests/resource/: resource.rc
Tests/tests/c/: container_tests.c  main.c  std_tests.c  wchar_t_tests.c  wchar_t_tests.h
Tests/tests/c/container/: map_tests.c  pair_tests.c
Tests/tests/c/std/: stdbool_tests.c  stdbool_tests.h  stdint_tests.c  stdint_tests.h
Tests/tests/mdc/: container_tests.c  container_tests.h  error_tests.c  error_tests.h  filesystem_tests.c  filesystem_tests.h  main.c  std_tests.c  std_tests.h  string_tests.c  string_tests.h  wchar_t_tests.c  wchar_t_tests.h  windows_tests.c  windows_tests.h
Tests/tests/mdc/container/: map_tests.c  map_tests.h  pair_tests.c  pair_tests.h  vector_tests.c  vector_tests.h
Tests/tests/mdc/error/: exit_on_error_tests.c  exit_on_error_tests.h
Tests/tests/mdc/filesystem/: current_executable_path_tests.c  current_executable_path_tests.h  path_windows_tests.c  path_windows_tests.h
Tests/tests/mdc/std/: assert_tests.c  assert_tests.h  stdbool_tests.c  stdbool_tests.h  stdint_tests.c  stdint_tests.h  threads_tests.c  threads_tests.h
Tests/tests/mdc/string/: basic_string_tests.c  basic_string_tests.h
Tests/tests/mdc/wchar_t/: filew_tests.c  filew_tests.h  wide_decoding_tests.c  wide_decoding_tests.h  wide_encoding_tests.c  wide_encoding_tests.h
Tests/tests/mdc/windows/: vs_fixed_file_info_tests.c  vs_fixed_file_info_tests.h  windows_vs_fixed_file_info_tests.c  windows_vs_fixed_file_info_tests.h
Tests/tests/sample_types/: char_cstring.c  char_cstring.h  integer.c  integer.h
TestsCpp98/: CMakeLists.txt  TestsCpp98.dsp
TestsCpp98/resource/: resource.rc
TestsCpp98/test/mdc/: error_tests.cpp  error_tests.hpp  main.cpp  std_tests.cpp  std_tests.hpp
TestsCpp98/test/mdc/error/: exit_on_error_tests.cpp  exit_on_error_tests.hpp
TestsCpp98/test/mdc/std/: mutex_tests.hpp  recursive_mutex_tests.cpp  recursive_mutex_tests.hpp  thread_tests.cpp  threads_tests.cpp  threads_tests.hpp
TestsCpp98/test/mdc/wchar_t/: wide_decoding_tests.cpp  wide_encoding_tests.cpp  wide_encoding_tests.hpp
TestsCpp98/tests/mdc/: error_tests.cpp  error_tests.hpp  main.cpp  std_tests.cpp  std_tests.hpp  wchar_t_tests.cpp  wchar_t_tests.hpp  windows_tests.cpp  windows_tests.hpp
TestsCpp98/tests/mdc/error/: exit_on_error_tests.cpp  exit_on_error_tests.hpp
(+162 files in other folders)
